spaced elements farther apart more and ensured that the menu will always collapse dependent on the screen width rather than the device width making it more responsive

--- a/src/main/item/ItemMenu.module.css
+++ b/src/main/item/ItemMenu.module.css
@@ -5,7 +5,7 @@
 	display: inline-block;
 }
 
-@media (min-device-width: 650px) {
+@media (min-width: 650px) {
 	.modalContainer {
 		display: none;
 	}
@@ -16,8 +16,14 @@
 .shouldBeHidden {
 	display: none;
 }
-@media (max-device-width: 370px) {
+@media (max-width: 370px) {
 	.shouldBeHidden{
 		display: block;
 	}
+}
+.leftMost {
+	margin-right: 1em;
+}
+.rightMost {
+	margin-left: 1em;
 }
